@@ -35,7 +35,6 @@ import core.message as message
 import core.node as node
 from core.node import Node, RoutingNode
 from core.routing_table import RoutingTable
-import core.bootstrap as bootstrap
 
 sys.path.pop()
 
@@ -66,12 +65,10 @@ QUARANTINE_PERIOD = 3 * 60 # 3 minutes
 MAX_NUM_TIMEOUTS = 2
 PING_DELAY_AFTER_TIMEOUT = 30 #seconds
 
-BOOTSTRAP_MODE = 'bootstrap_mode'
 FIND_CLOSEST_MODE = 'find_closest_mode'
 FILL_BUCKETS= 'fill_buckets'
 NORMAL_MODE = 'normal_mode'
-_MAINTENANCE_DELAY = {# bootstrap delay is determined by the bootstrap module
-                      FIND_CLOSEST_MODE: 3,
+_MAINTENANCE_DELAY = {FIND_CLOSEST_MODE: 3,
                       FILL_BUCKETS: 1,
                       NORMAL_MODE: 6}
 
@@ -84,15 +81,14 @@ MAX_TIMEOUTS_IN_A_ROW = 10 # When x timeouts in a row, we consider that the
 
 class RoutingManager(object):
     
-    def __init__(self, my_node, bootstrap_nodes, msg_f):
+    def __init__(self, my_node, msg_f, bootstrapper):
         self.my_node = my_node
-        self.bootstrapper = bootstrap.OverlayBootstrapper(my_node.id,
-                                                          bootstrap_nodes, msg_f)
         self.msg_f = msg_f
+        self.bootstrapper = bootstrapper
         self.table = RoutingTable(my_node, NODES_PER_BUCKET)
         # maintenance variables
         self._next_stale_maintenance_index = 0
-        self._maintenance_mode = BOOTSTRAP_MODE
+        self._maintenance_mode = FILL_BUCKETS
         self._replacement_queue = _ReplacementQueue(self.table)
         self._query_received_queue = _QueryReceivedQueue(self.table)
         self._found_nodes_queue = _FoundNodesQueue(self.table)
@@ -117,17 +113,7 @@ class RoutingManager(object):
         queries_to_send = []
         maintenance_lookup = None
         maintenance_delay = 0
-        if self._maintenance_mode == BOOTSTRAP_MODE: 
-                (queries_to_send,
-                 maintenance_lookup,
-                 bootstrap_delay) = self.bootstrapper.do_bootstrap(
-                    self.table.num_rnodes)
-                if bootstrap_delay:
-                    maintenance_delay = bootstrap_delay
-                else:
-                    self._maintenance_mode = FILL_BUCKETS
-                    self.bootstrapper.bootstrap_done()
-        elif self._maintenance_mode == FILL_BUCKETS:
+        if self._maintenance_mode == FILL_BUCKETS: #TODO: kill
             if self._num_pending_filling_lookups:
                 self._num_pending_filling_lookups -= 1
                 maintenance_lookup = self._get_maintenance_lookup()
@@ -187,13 +173,6 @@ class RoutingManager(object):
         return self._replacement_queue.pop(0)
                                   
     def _get_maintenance_query(self, node_, do_fill_up=False):
-        '''
-        if not node_.id: 
-            # Bootstrap nodes don't have id
-            return message.OutgoingFindNodeQuery(node_,
-                                                 self.my_node.id,
-                                                 self.my_node.id, None)
-        '''
         if do_fill_up or random.choice((False, True)):
 
             # 50% chance to send a find_node to fill up a non-full bucket
@@ -219,7 +198,7 @@ class RoutingManager(object):
         will be sent out by the caller)
         '''
         self._num_timeouts_in_a_row = 0
-        if self.bootstrapper.is_bootstrap_node(node_):
+        if self.bootstrapper.is_hardcoded(node_.addr):
             return
         
         log_distance = self.my_node.distance(node_).log
@@ -257,7 +236,7 @@ class RoutingManager(object):
             
     def on_response_received(self, node_, rtt, nodes):
         self._num_timeouts_in_a_row = 0
-        if self.bootstrapper.is_bootstrap_node(node_):
+        if self.bootstrapper.is_hardcoded(node_.addr):
             return
 
         if nodes:
@@ -353,7 +332,7 @@ class RoutingManager(object):
         if self._num_timeouts_in_a_row > MAX_TIMEOUTS_IN_A_ROW:
             # stop, do not expell nodes from routing table
             return []
-        if self.bootstrapper.is_bootstrap_node(node_):
+        if self.bootstrapper.is_hardcoded(node_.addr):
             return []
 
         log_distance = self.my_node.distance(node_).log
